# speedtest_dashboard

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
src/: app.py  recorder.py  speedtest.py
