[tool.poetry]
name = "speedtest-dashboard"
version = "0.1.0"
description = ""
authors = ["Sascha Hoeche <sascha.hoeche@gmx.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
ruff = "^0.4.10"
pytest = "^8.2.2"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
